--- a/resumeProject.html
+++ b/resumeProject.html
@@ -97,7 +97,7 @@
             <p><b>Developer Tools</b>: Git, VS Code, Visual Studio, PyCharm, NeoVim</p>
             <p><b>Libraries</b>: Pandas, NumPy, Matplotlib, Seaborn</p>
         </div>
-
+        <footer>&#169;Abhijeet Kumar. All right reserved. </footer>
 
 
     </fieldset>
